--- a/src/pages/questions-bank/components/QuestionDrawer/QuestionDrawer.css
+++ b/src/pages/questions-bank/components/QuestionDrawer/QuestionDrawer.css
@@ -303,7 +303,7 @@
 }
 
 .question-drawer-save {
-  align-self: flex-start;
+  align-self: flex-end;
   padding: 10px var(--space-ml);
   font-size: 14px;
   font-weight: 700;
